replace template contents

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,15 @@
-Package: MyBioconductorPackage
-Title: Demonstration of a Bioconductor Package
+Package: iSEEdeseq2
+Title: iSEE Panels for DESeq2
 Version: 0.99.0
-Date: 2022-05-10
-Authors@R: 
-    c(person("Kevin", "Rue", "Christophe", "kevinrue@users.noreply.github.com",
-             role = c("aut", "cre"),
-             comment = c(ORCID = "0000-0003-3899-3872")))
-Description: This package demonstrates the set up of a Bioconductor-friendly
-    package using the packages usethis and biocthis. The setup includes the
-    initialisation of a git repository as well as the connection of the local
-    repository to the GitHub website.
+Date: 2022-10-17
+Authors@R: c(person("Kevin", "Rue-Albrecht", role = c("aut", "cre"), email = "kevinrue67@gmail.com", comment = c(ORCID = "0000-0003-3899-3872")))
+Description: This package implements panels for the iSEE package.
+    Those panels are desgined to display the results of analyses performed using
+    the DESeq2 package.
+    Those results must be stored in a SummarizedExperiment object.
 License: Artistic-2.0
-URL: https://github.com/kevinrue/MyBioconductorPackage
-BugReports: https://support.bioconductor.org/t/MyBioconductorPackage
+URL: https://github.com/kevinrue/iSEEdeseq2
+BugReports: https://support.bioconductor.org/t/iSEEdeseq2
 biocViews: Software,
     Infrastructure
 Encoding: UTF-8
